# Aequalis

./: CMakeLists.txt  README.md
documentation/: Aequalis_Cpp_White_Paper.md
include/: DiffModel.hpp  MainWindow.hpp  Scanner.hpp  Types.hpp  Worker.hpp
src/: DiffModel.cpp  MainWindow.cpp  Scanner.cpp  Worker.cpp  main.cpp
